--- a/tf_examples/setup.cfg
+++ b/tf_examples/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/tf_examples
+script_dir=$base/lib/tf_examples
 [install]
-install-scripts=$base/lib/tf_examples
+install_scripts=$base/lib/tf_examples
